fixed spacing toggle and the label

--- a/packages/core/src/components/toggle/toggle.scss
+++ b/packages/core/src/components/toggle/toggle.scss
@@ -15,6 +15,9 @@
   display: inline-flex;
   flex-direction: row;
   position: relative;
+  height: 1.5rem;
+  margin-block-start: 0.25rem;
+  margin-block-end: 0.25rem;
 
   input[type='checkbox'] {
     display: none;
@@ -32,7 +35,8 @@
     white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin: 0;
+    margin-block-start: 0.125rem;
+    margin-inline-start: 0.5rem;
     margin-left: 0.625rem;
     align-self: center;
   }
